--- a/src/pages/social.css
+++ b/src/pages/social.css
@@ -25,7 +25,7 @@ html, body {
   min-width: 350px;
   max-width: 350px;
   scrollbar-width: thin;
-  scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
+  scrollbar-color: var(--scrollbar-thumb1) var(--bg-secondary);
   overflow-y: auto;
   padding-right: 15px;
 }
