--- a/src/pages/tasks.css
+++ b/src/pages/tasks.css
@@ -49,7 +49,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     overflow: auto;
     scrollbar-width: thin;
-    scrollbar-color: var(--bg-secondary) var(--bg-tertiary);
+    scrollbar-color: var(--scrollbar-thumb2) var(--bg-tertiary);
     scrollbar-gutter: stable;
   }
   .section.overview{
@@ -134,7 +134,7 @@
   overflow-y: hidden;
   padding-bottom: 12px; /* Space for scrollbar */
   scrollbar-width: thin;
-  scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
+  scrollbar-color: var(--scrollbar-thumb1) var(--bg-secondary);
   scrollbar-gutter: stable;
   
   /* Track */
